# mlops

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  LICENSE  Makefile  README.md  models.dvc  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.dvc/: config
.github/workflows/: ci.yaml  container.yml  gac.yml
configs/: config.yaml
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
jobs/: train.yml
reports/: README.md  report.py
src/mlops/: api.py  data.py  evaluate.py  evaluation.py  model.py  quantize.py  train.py  util.py
tests/: test_data.py  test_evaluate.py  test_model.py  test_train.py
