[project]
name = "mlops"
version = "0.0.1"
description = "An LLM for the Greek language"
authors = [
  { name = "Ioanna Gemou", email = "s233095@dtu.dk" },
  { name = "Evangelos Lamprou", email = "evala@dtu.dk" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
train = "mlops.train:main"
evaluate = "mlops.evaluate:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

[tool.docker]
# Docker-specific configurations 
base-image = "python:3.11-slim"  # Base image for the Dockerfile
working-directory = "/app"       # Default working directory in the container
dockerfile-train = "dockerfiles/train.dockerfile"  # Dockerfile for training
dockerfile-evaluate = "dockerfiles/evaluate.dockerfile"  # Dockerfile for evaluation
dockerfile-api = "dockerfiles/api.dockerfile"  # Dockerfile for the API
